--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node -r tsconfig-paths/register src/main.ts"
+    "dev": "npm install | nodemon --exec ts-node -r tsconfig-paths/register src/main.ts | npx pino-pretty"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,9 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^5.0.1",
+    "pino": "^9.6.0",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
@@ -35,11 +38,13 @@
     "@nestjs/config": "^4.0.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.5",
+    "@types/pino": "^7.0.4",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
     "@typescript-eslint/parser": "^8.25.0",
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
+    "nodemon": "^3.1.9",
     "prettier": "^3.5.2",
     "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
