--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@nestjs/platform-express": "^11.0.10",
     "@prisma/client": "^6.4.1",
     "@types/bcrypt": "^5.0.2",
+    "@types/morgan": "^1.9.9",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "express": "^5.0.1",
+    "morgan": "^1.10.0",
     "pino": "^9.6.0",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
